@@ -1,5 +1,6 @@
 2007-04-19  Brian Bidulock  <bidulock@openss7.org>
 
+	* include/sys/streams/stropts.h: added RFILL mode and RPROTCOMPRESS protocol
 	* include/sys/streams/stream.h: added M_MI message type and subtypes
 	* doc/man/man9/M_SETOPTS.9.man: documented RFILL mode
 	* src/test/perftest.c: added new features
